--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/horizon": "^4.3",
         "laravel/nova": "^3.6",
         "laravel/tinker": "^2.0",
+        "spatie/calendar-links": "^1.4",
         "spatie/laravel-backup": "^6.11",
         "spatie/laravel-flash": "^1.6",
         "spatie/laravel-honeypot": "^2.2",
