--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
+        "blade-ui-kit/blade-heroicons": "^0.1.2",
+        "blade-ui-kit/blade-icons": "^0.4.3",
         "facade/ignition": "^2.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
