--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "@tailwindcss/ui": "^0.3.1",
+        "alpine": "^0.2.1",
+        "tailwindcss": "^1.4.6"
     }
 }
