--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "dependencies": {
         "@tailwindcss/ui": "^0.3.1",
-        "alpine": "^0.2.1",
+        "alpinejs": "^2.6.0",
         "tailwindcss": "^1.4.6"
     }
 }
