--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@tailwindcss/ui": "^0.3.1",
         "alpinejs": "^2.6.0",
+        "dateformat": "^3.0.3",
         "tailwindcss": "^1.4.6"
     }
 }
