--- a/composer.json
+++ b/composer.json
@@ -11,29 +11,29 @@
         "php": "^7.4",
         "blade-ui-kit/blade-heroicons": "^0.1.2",
         "blade-ui-kit/blade-icons": "^0.4.3",
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
-        "laravel/horizon": "^4.3",
-        "laravel/nova": "^3.6",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.0",
+        "laravel/horizon": "^5.0",
+        "laravel/nova": "^3.9",
         "laravel/tinker": "^2.0",
         "spatie/calendar-links": "^1.4",
         "spatie/laravel-backup": "^6.11",
-        "spatie/laravel-flash": "^1.6",
-        "spatie/laravel-honeypot": "^2.2",
+        "spatie/laravel-flash": "^1.7",
+        "spatie/laravel-honeypot": "dev-master",
         "spatie/laravel-mailcoach": "^2.15",
         "spatie/laravel-mailcoach-monaco": "^1.1",
         "spatie/laravel-tail": "^4.2"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.7",
+        "barryvdh/laravel-ide-helper": "^2.8",
         "fzaninotto/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "^2.16",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3",
         "spatie/laravel-log-dumper": "^1.2",
         "spatie/laravel-stubs": "^1.1"
     },
