--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "spatie/laravel-honeypot": "dev-master",
         "spatie/laravel-mailcoach": "^2.15",
         "spatie/laravel-mailcoach-monaco": "^1.1",
-        "spatie/laravel-tail": "^4.2"
+        "spatie/laravel-tail": "^4.2",
+        "wildbit/swiftmailer-postmark": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
@@ -38,6 +39,9 @@
         "spatie/laravel-stubs": "^1.1"
     },
     "config": {
+        "platform": {
+            "php": "7.4.7"
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
