--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "spatie/calendar-links": "^1.4",
         "spatie/laravel-backup": "^6.11",
         "spatie/laravel-flash": "^1.7",
-        "spatie/laravel-honeypot": "dev-main",
+        "spatie/laravel-honeypot": "^3.0",
         "spatie/laravel-mailcoach": "^2.15",
         "spatie/laravel-mailcoach-monaco": "^1.1",
         "spatie/laravel-tail": "^4.2",
@@ -44,7 +44,10 @@
         },
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "ocramius/package-versions": true
+        }
     },
     "extra": {
         "laravel": {
